<resources>
    <string name="app_name">Brorkout</string>
    <string name="action_settings">Settings</string>
    <string name="application_image_info">application image</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="bg_image_info">Background gradient image</string>

    <string name="title_activity_gestore_scheda">GestoreScheda</string>
    <string name="title_activity_schedule_creator">ScheduleCreator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="IntroActivity">Intro activity</string>
    <string name="LoginActivity">Login activity</string>
    <string name="SignUpActivity">Sign-Up activity</string>
    <string name="StartingMenuActivity">Menu activity</string>
    <string name="SelectSchedule">Select schedule</string>
    <string name="CreateSchedule">Create schedule</string>
    <string name="ArchiveSchedule">Archivio activity</string>
    <string name="OptionSchedule">Option activity</string>
    <string name="PersonalArea">Personal Area</string>


    <!-- Number Picker -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recupero">Recupero :</string>
    <string name="quote">\"</string>
    <string name="zavorre">Zavorre :</string>
    <string name="ciao">Ciao</string>
    <string name="option">Opzioni</string>
    <string name="new_plan">Nuova Scheda</string>
    <string name="start_plan">Comincia allenamento</string>
    <string name="archive_plan">Archivio allenamenti</string>
    <string name="personal_area">Area Personale</string>
    <string name="set_example">Set: 0/n</string>
    <string name="rep_example">Rep: n</string>
    <string name="Video_Example">Video On</string>
    <string name="tempo_di_tenuta_example">Tempo di tenuta:</string>
    <string name="rec_example">Rec: 60</string>
    <string name="start">Start</string>
    <string name="indicazioni_example">Indicazioni: bla bla bla bla</string>
    <string name="ic_home_back_button">ic home back button</string>
    <string name="plan_title_example">Prova titolo plan</string>
    <string name="exe_example">ESERICZI0 1 \nESERCIZIO 2</string>
    <string name="day_n">Giornata n</string>


    <!-- Intro variables -->
    <string name="appName">Brorkout</string>
    <string name="welcome_back_to_brorkout">Bentornato a Brorkout!</string>
    <string name="login">Accedi</string>
    <string name="signup">Registrati</string>

    <!-- Login and sign-up variables -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Ripeti la password</string>

    <string name="signup_underline"><u>Registrati</u>.</string>
    <string name="login_underline"><u>Accedi</u>.</string>

    <string name="welcome_back">Bentornato</string>
    <string name="sign_in_account">Accedi al tuo account</string>
    <string name="signup_account">Crea il tuo account</string>
    <string name="remember_me">Ricordami</string>
    <string name="personal">Scheda Personale</string>
    <string name="dont_have_account">Non hai un account?</string>
    <string name="have_account">Hai già un account?</string>

    <!-- Image info variables -->
    <string name="background_info">Background image intro</string>
    <string name="intro_image">Intro Image</string>
    <string name="brorkout_icon">Brorkout icon</string>
    <string name="login_image_info">login image</string>


    <!-- Number Picker numeri giornate-->
    <string-array name="exerciseType">
        <item>Serie</item>
        <item>Incrementale</item>
        <item>Piramidale</item>
        <item>Tenuta</item>
    </string-array>

    <string-array name="exerciseTypeLabels">
        <item><FONT COLOR="@color/light_blue_200"><b>Serie</b></FONT></item>
        <item><FONT COLOR="@color/light_blue_200"><b>Incrementale</b></FONT></item>
        <item><FONT COLOR="@color/light_blue_200"><b>Piramidale</b></FONT></item>
        <item><FONT COLOR="@color/light_blue_200"><b>Tenuta</b></FONT></item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="scheduleDays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

</resources>