<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_200"
    tools:context=".activity.StartingMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_15sdp"
        android:gravity="center_horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/light_blue_200"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:src="@drawable/immagine_profilo_vuoto"
                app:civ_border_color="@color/light_blue_200"
                android:layout_marginBottom="@dimen/_10sdp"
                app:civ_border_width="@dimen/_4sdp" />

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="@color/light_blue_200"
                android:textSize="@dimen/_20sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/createScheduleBtn"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_75sdp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/light_blue_500"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/CreateSchedule"
                        app:srcCompat="@drawable/ic_write"/>

                    <ImageButton
                        android:id="@+id/startWorkoutBtn"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_75sdp"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        android:backgroundTint="@color/light_blue_700"
                        android:contentDescription="@string/UseSchedule"
                        app:srcCompat="@drawable/ic_flag" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/personalArea"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_75sdp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/blue_500"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/PersonalArea"
                        app:srcCompat="@drawable/ic_personal" />


                    <ImageButton
                        android:id="@+id/optionBtn"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_75sdp"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        android:backgroundTint="@color/blue_700"
                        android:contentDescription="@string/OptionSchedule"
                        app:srcCompat="@drawable/ic_settings" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/light_blue_200"/>

                    <ImageView
                        android:id="@+id/buttonBack"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:background="@drawable/circled_button"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_muscle"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/light_blue_200"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>